welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:14: error: type mismatch;
 found   : Unit
 required: Int
  else if (num==2) {return 2}
       ^